handle multiple return controller swagger
